# linux_containers

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  rustfmt.toml
containerd/: Cargo.toml  build.rs
containerd/proto/api/events/: container.proto  content.proto  image.proto  namespace.proto  snapshot.proto  task.proto
containerd/proto/api/runtime/sandbox/v1/: sandbox.proto
containerd/proto/api/runtime/task/v2/: shim.proto
containerd/proto/api/services/containers/v1/: containers.proto
containerd/proto/api/services/content/v1/: content.proto
containerd/proto/api/services/diff/v1/: diff.proto
containerd/proto/api/services/events/v1/: events.proto
containerd/proto/api/services/images/v1/: images.proto
containerd/proto/api/services/introspection/v1/: introspection.proto
containerd/proto/api/services/leases/v1/: leases.proto
containerd/proto/api/services/namespaces/v1/: namespace.proto
containerd/proto/api/types/: descriptor.proto  metrics.proto  mount.proto  platform.proto  sandbox.proto
containerd/proto/api/types/task/: task.proto
containerd/proto/plugin/: fieldpath.proto
containerd/proto/plugin/rpc/: status.proto
containerd/src/: api.rs  containers.rs  content.rs  error.rs  filters.rs  image.rs  lib.rs  mount.rs  runtime.rs
containerd/src/api/events/: container.proto
containerd/src/content/: helpers.rs  store.rs
containerd/src/filters/: adaptor.rs  filter.rs  parser.rs  scanner.rs  tests.rs
containerd/src/image/: handlers.rs
containerd/src/mount/: losetup.rs  mount.rs
containerd/src/runtime/: events.rs  monitor.rs  task.rs
(+13 files in other folders)
