[package]
name = "containerd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
time = "0.3"
bytes = "1.2.1"
prost = "0.11"
prost-types = "0.11"
nix = "0.25"
libc = "0.2"
loopdev = "0.4.0"
sys-mount = "1.5"
log = "0.4"
tokio = "1.21"
oci-spec = "0.5.8"
image_digest = { path = "../image_digest" }

[build-dependencies]
prost-build = "0.11"
